feat: AppCheckout add

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://js.braintreegateway.com/web/dropin/1.31.0/js/dropin.min.js"></script>
+
   </body>
 </html>
